--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "devDependencies": {
-    "vitepress": "^1.0.0-beta.2"
+    "vitepress": "^1.0.0-beta.7"
   },
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
+  },
+  "dependencies": {
+    "global": "^4.4.0",
+    "vuepress-plugin-code-switcher": "^2.0.0"
   }
 }
